# tira

./: .buildinfo  .devcontainer.json  .dockerignore  .gitignore  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  api.html  changelog.html  docker-compose.dev.yml  docker-compose.yml  faq.html  genindex.html  glossary.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  suggestion.md  test.py  tira.code-workspace
application/: .devcontainer.json  .dockerignore  .gitignore  Dockerfile.application  Dockerfile.application-dev  Dockerfile.application-diffir  Dockerfile.application-grpc  Dockerfile.application-with-chatnoir  Dockerfile.application_ir_datasets_jupyter  Dockerfile.basis  Dockerfile.prod  Dockerfile.vuetify  Makefile  README.md  \dev\null  modify_json.py  none.json  pyproject.toml  requirements.txt  rest-api.yml  search.py  setup.cfg  setup.sh
application/config/: tira-application-config.dev.yml  tira-application-config.docker.yml  tira-application-config.yml
application/mock-data/: mock-data.json
application/src/: manage.py  run_grpc_server.py  tira_nginx.conf  tirex-components.json  tirex-components.yml  uwsgi.ini
application/test/: api_access_matrix.py  existing_task_and_dataset_with_few_evaluations.json.approved.txt  existing_task_and_dataset_with_little_evaluations.json.approved.txt  non_existing_task_and_dataset.json.approved.txt  result_for_existing_task.approved.txt  result_software_submissions_for_existing_task.approved.txt  result_software_submissions_for_existing_task_and_user_without_software.approved.txt  result_upload_submissions_for_existing_task.approved.txt  result_upload_submissions_for_non_existing_task.approved.txt  run_all_tests.sh  settings_test.py  test-s3-config  test_accessibility_of_all_endpoints.py  test_accessibility_of_all_endpoints_for_admin_user.py  test_accessibility_of_all_endpoints_for_all_users.py  test_accessibility_of_all_endpoints_for_guest_user.py  test_accessibility_of_all_endpoints_for_organizer_of_wrong_task_user.py  test_accessibility_of_all_endpoints_for_organizer_user.py  test_accessibility_of_all_endpoints_for_participant_user.py  test_for_existing_task_and_dataset_with_few_evaluations_including_blinded.json.approved.txt  test_for_existing_task_and_dataset_with_little_evaluations_including_blinded.json.approved.txt  test_for_existing_task_and_meta_dataset_with_few_evaluations.json.approved.txt  test_irds_id_translation.py  test_rendering_with_multiple_input_runs.approved.txt  test_rendering_with_multiple_input_runs_and_hf_mounts.approved.txt  test_rendering_with_multiple_input_runs_and_hf_mounts_and_tira_image_workdir.approved.txt  test_rendering_with_single_input_run.approved.txt  test_rendering_without_input_run.approved.txt  utils_for_testing.py  vm_eval_for_existing_docker_software_of_wrong_user_02.json.approved.txt  vm_eval_for_existing_docker_software_with_all_published.json.approved.txt  vm_eval_for_existing_docker_software_with_none_published_on_test_data.json.approved.txt  vm_eval_for_existing_docker_software_with_none_published_on_test_data_no_ev.json.approved.txt  vm_eval_for_existing_docker_software_with_one_published.json.approved.txt  vm_eval_for_existing_docker_software_with_one_published_on_test_data.json.approved.txt  vm_eval_for_existing_upload_submission.json.approved.txt  vm_eval_for_non_existing_task_and_dataset.json.approved.txt
python-client/: .devcontainer.json  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.dev-python3.7  Makefile  README.md  pyproject.toml  setup.cfg  template-notebook-no-tira.ipynb  template-notebook.ipynb
python-client/sphinx/: conf.py  index.rst
python-client/tests/: IrLabSoSe2024Test.test_corpus_is_available.approved.txt  IrLabSoSe2024Test.test_digest_of_index_2023_01.approved.txt  IrLabSoSe2024Test.test_digest_of_index_2023_06.approved.json  IrLabSoSe2024Test.test_digest_of_index_2023_08.approved.txt  IrLabSoSe2024Test.test_digest_of_index_ir_lab_training.approved.json  IrLabSoSe2024Test.test_digest_of_run_outputs.approved.json  IrLabSoSe2024Test.test_digest_of_run_outputs.approved.txt  IrLabSoSe2024Test.test_longeval_06_corpus_is_available.approved.txt  IrLabSoSe2024Test.test_longeval_08_corpus_is_available.approved.txt  IrLabSoSe2024Test.test_longeval_2023_01_is_available.approved.txt  IrLabSoSe2024Test.test_longeval_heldout_corpus_is_available.approved.json  IrLabSoSe2024Test.test_longeval_long_september_corpus_is_available.approved.json  IrLabSoSe2024Test.test_longeval_short_jul_corpus_is_available.approved.json  IrLabSoSe2024Test.test_longeval_train_corpus_is_available.approved.json  IrLabSoSe2024Test.test_padua_longeval_06_corpus_is_available.approved.json  IrLabSoSe2024Test.test_padua_longeval_08_corpus_is_available.approved.txt  IrLabSoSe2024Test.test_training_corpus_is_available.approved.txt  IrLabSoSe2024Test.test_training_corpus_truth_is_available.approved.json  ReNeuIr2024Test.test_dev_queries_1000_corpus_is_available.approved.json  ReNeuIr2024Test.test_dev_queries_1000_truth_corpus_is_available.approved.json  ReNeuIr2024Test.test_dev_queries_1000_truth_corpus_is_available.approved.txt  ReNeuIr2024Test.test_dev_queries_100_corpus_is_available.approved.json  ReNeuIr2024Test.test_dev_queries_100_corpus_is_available.approved.txt  ReNeuIr2024Test.test_dev_queries_100_truth_corpus_is_available.approved.json  ReNeuIr2024Test.test_dev_queries_all_corpus_is_available.approved.json  ReNeuIr2024Test.test_dev_queries_all_truth_corpus_is_available.approved.json  ReNeuIr2024Test.test_dl_1000_corpus_is_available.approved.json  ReNeuIr2024Test.test_dl_1000_corpus_is_available.approved.txt  ReNeuIr2024Test.test_dl_1000_truth_corpus_is_available.approved.json  ReNeuIr2024Test.test_dl_100_corpus_is_available.approved.json  ReNeuIr2024Test.test_dl_100_truth_corpus_is_available.approved.json  (+68 more)
python-client/tira/: __init__.py  check_format.py  (+28 more)
worker/: Dockerfile.podman.prod  Dockerfile.prod  README.md  pyproject.toml  setup.cfg  tira-worker-config.yml
(+1431 files in other folders)
