
[options]
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    grpcio>=1.53.2
    # grpcio-tools==1.36.1  # still needed?
    protobuf<4.0dev
    pyuwsgi
    Django
    pyyaml
    requests
    randomname
    tqdm
    mysql
    mysqlclient
    django-webpack-loader==0.6.0
    python-gitlab
    GitPython
    python-slugify
    ir-datasets@git+https://github.com/allenai/ir_datasets
    diffir@git+https://github.com/mam10eks/diffir
    pandas
    markdown
    PyGithub==1.59.1
    ghapi
    django-extensions
    discourse-client-in-disraptor==0.0.8
    tira>=0.0.97
    huggingface-hub
    djangorestframework==3.15.1
    django-filter==24.2
    djangorestframework-jsonapi==7.0.0

[options.extras_require]
test =
    mockito
    parameterized
    approvaltests==7.3.0
dev =
    coverage
    coverage-badge


[flake8]
max-line-length = 120
extend-ignore = E203
include = src,test
exclude = src/tira/migrations,src/tira/proto
max-complexity = 10
