[metadata]
name = tira_app

[options]
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    grpcio>=1.53.2
    # grpcio-tools==1.36.1  # still needed?
    protobuf<4.0dev
    Django
    pyyaml
    requests
    randomname
    tqdm
    mysqlclient
    python-gitlab
    GitPython
    python-slugify
    ir-datasets
    diffir@git+https://github.com/mam10eks/diffir
    pandas
    markdown
    PyGithub==1.59.1
    django-extensions
    discourse-client-in-disraptor==0.0.8
    # tira>=0.0.97
    huggingface-hub
    djangorestframework==3.15.1
    django-filter==24.2
    djangorestframework-jsonapi==7.0.0
    pyaml-env==1.2.1

[options.extras_require]
test =
    mockito
    parameterized
    approvaltests==7.3.0
    pytest-django
    pytest-env==1.1.3
dev =
    coverage
    coverage-badge
    black
    flake8
    isort
    mypy
deploy =
    uwsgi
postgreqsql =
    psycopg2-binary

[options.packages.find]
where = src
include =
    tira_app
    tira_app.*
    django_admin

[options.package_data]
tira_app.res = *.yml

[flake8]
max-line-length = 120
extend-ignore = E203
include = src,test
exclude = src/tira/migrations,src/tira/proto
max-complexity = 10
