[metadata]
name = tira
version = attr: tira.__version__
author = Maik Fröbe
author_email = maik.froebe@uni-weimar.de
maintainer = Maik Fröbe
description = Simple access to the TIRA API.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/tira-io/tira
project_urls =
    Bug Tracker = https://github.com/tira-io/tira/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    requests>=2.26,==2.*
    pandas
    packaging
    tqdm
    gitpython
    pyyaml
    docker>=7.1.0,==7.*

[options.extras_require]
test =
    pytest>=8.0,==8.*
    pytest-cov>=5.0,==5.*
    approvaltests
    evaluate
    parameterized
dev =
    numpy==1.*
ir =
    pyterrier-alpha
    python-terrier>=1.0
    ir-datasets>=0.5.9
    trectools
all =
    docker>=7.1.0,==7.*
    numpy==1.*
    pyterrier-alpha
    python-terrier>=1.0
    ir-datasets>=0.5.9
    trectools

[options.entry_points]
console_scripts =
    tira-run = tira.tira_run:main
    tira-cli = tira.tira_cli:main
    tira-run-notebook = tira.tira_run_notebook:main
    tira-run-inference-server = tira.tira_run_inference_server:main

pyterrier.artifact.url_protocol_resolver =
    tira = tira.pyterrier_integration:pt_artifact_entrypoint

pyterrier.artifact =
    tira.pt_transformer = tira.pyterrier_integration:pt_transformer
    tira.pt_query_transformer = tira.pyterrier_integration:pt_query_transformer
    tira.pt_index_transformer = tira.pyterrier_integration:pt_index_transformer
    tira.pt_document_transformer = tira.pyterrier_integration:pt_document_transformer

[options.package_data]
tira.static_redirects = *.json
tira = tirex-tracker-*-linux

[flake8]
max-line-length = 120
extend-ignore = E203
max-complexity = 10
