[metadata]
name = tira-worker
version = attr: tira_worker.__version__
author = Maik Fröbe
author_email = maik.froebe@uni-weimar.de
maintainer = Maik Fröbe
description = Simple access to the TIRA API.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/tira-io/tira
project_urls =
    Bug Tracker = https://github.com/tira-io/tira/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    celery[librabbitmq]
    pyaml-env==1.2.1

[options.extras_require]
test =
    pytest>=8.0,==8.*
    pytest-cov>=5.0,==5.*

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore = E203
max-complexity = 10
